Version 1.6.0 (2022-05-28)
- Add impulse event

Version 1.5.4 (2022-05-24)
- Add function attribute only if set

Version 1.5.3 (2022-05-24)
- Rename subsection to function

Version 1.5.2 (2022-05-24)
- Add subsection to attributes
- Use parser for internal sysvars

Version 1.5.0 (2022-05-23)
- Add option to replace too technical parameter name by friendly parameter name
- Ignore more parameters by device
- Use dataclass for sysvars
- Limit sysvar length to 255 chars due to HA limitations

Version 1.4.0 (2022-05-16)
- Block parameters by device_type that should not create entities in HA
- Fix remove instance on shutdown

Version 1.3.1 (2022-05-13)
- Increase connection timeout(30s->60s) and reconnect interval(90s->120s) to better support slower hardware

Version 1.3.0 (2022-05-06)
- Use unit for vars, if available
- Remove special handling for pydevccu
- Remove set boost mode to false, when preset is none for bidcos climate entities

Version 1.2.2 (2022-05-02)
- Fix light channel for multi dimmer

Version 1.2.1 (2022-04-27)
- Fix callback alive check
- Reconnect clients based on outstanding xml callback events

Version 1.2.0 (2022-04-26)
- Cleanup build

Version 1.1.5 (2022-04-25)
- Reorg light attributes
- Add on_time to light and switch

Version 1.1.4 (2022-04-21)
- Use min as default if default is unset for parameter_data

Version 1.1.3 (2022-04-20)
- Add CeColorDimmer
- Fix interface_event

Version 1.1.2 (2022-04-12)
- Add extra_params to _post_script
- Add set_system_variable with string value
- Disallow html tags in string system variable

Version 1.1.1 (2022-04-11)
- Read version and serial in get_client

Version 1.1.0 (2022-04-09)
- Add BATTERY_STATE to DEFAULT_ENTITIES
- Migrate device_info to dataclass
- Add rega script (provided by @baxxy13) to get serial from CCU
- Add method to clean up cache dirs

Version 1.0.6 (2022-04-06)
- Revert to XmlRPC getValue and getParamset for CCU

Version 1.0.5 (2022-04-05)
- Limit hub_state to ccu only
