@@ -1,5 +1,6 @@
 Version 1.6.0 (2022-05-28)
 - Add impulse event
+- Add LEVEL and STATE to HmIP-Heating group to display hvac_action
 
 Version 1.5.4 (2022-05-24)
 - Add function attribute only if set
